Refactor CORS configuration and improve variable initialization in JWT authentication filter